--- a/watchClock/zh-Hans.lproj/Localizable.strings
+++ b/watchClock/zh-Hans.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "Face Style" = "表盘背景";
 "Minute Style" = "分针样式";
 "Logo Style" = "LOGO样式";
-"Hour Style" = "分针样式";
+"Hour Style" = "时针样式";
 "Second Style" = "秒针样式";
 "Backgroud" = "背景图片";
 "empty" = "无";
